apps/father-testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: father-testing-service
spec:
  selector:
    app: father-testing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
